--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ packages/
 /src/tests/**/html_report
 /src/sxastarter-nextjs/.next-container
 /src/sxastarter/scjssconfig.json
+# Local Netlify folder
+.netlify
