--- a/src/items/sxa-content/content/Verticals/Services/Home/authors.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/authors.yml
@@ -89,3 +89,13 @@ Languages:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
       Value: "45473793-2cc3-4590-9d43-a5e5400b3bd8"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "4314386e-996f-4180-bac7-a6b6c69506b5"
