--- a/src/items/sxa-content/content/Verticals/Services/Home/authors/david-kim.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/authors/david-kim.yml
@@ -12,9 +12,15 @@ SharedFields:
   Hint: Photo
   Value: |
     <image mediaid="{34DAB229-645C-445F-81FC-AEE78D5132DF}" alt="Bio headshot" height="" width="" hspace="" vspace="" />
+- ID: "a4f985d9-98b3-4b52-aaaf-4344f6e747c6"
+  Hint: __Workflow
+  Value: "{E9B6C600-C6E8-4867-BCB7-8B0DC5F19840}"
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: 500
+- ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
+  Hint: __Shared revision
+  Value: "9c79dcc4-70f9-422a-b6fb-ca43b032a8aa"
 Languages:
 - Language: en
   Fields:
@@ -66,3 +72,16 @@ Languages:
     - ID: "996749ca-6a47-463d-a759-7db65676f179"
       Hint: Name
       Value: Patricia Ball
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "e4e33b06-63b3-419f-a754-19f1c2ae9c26"
+    - ID: "996749ca-6a47-463d-a759-7db65676f179"
+      Hint: Name
+      Value: "david-kim"
