--- a/src/items/sxa-content/content/Verticals/Services/Home/authors/michael-oreilly.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/authors/michael-oreilly.yml
@@ -69,3 +69,16 @@ Languages:
     - ID: "996749ca-6a47-463d-a759-7db65676f179"
       Hint: Name
       Value: Gabby Ross
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "e28139ff-0b79-48c4-b600-4533597bf6cd"
+    - ID: "996749ca-6a47-463d-a759-7db65676f179"
+      Hint: Name
+      Value: "michael-oreilly"
