--- a/src/items/sxa-content/content/Verticals/Services/Home/portfolio/a-digital-transformation-story-premiere-insurance.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/portfolio/a-digital-transformation-story-premiere-insurance.yml
@@ -63,3 +63,23 @@ Languages:
       Hint: Client
       Value: |
         <image mediaid="{BE5D7615-900B-467B-AD19-58A3907E43EE}" />
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "a037fca1-e9ce-4c41-a5d9-3f58e83666ae"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "5d3a7fc5-9111-4d1e-bd80-a08ad61542b2"
