--- a/src/items/sxa-content/content/Verticals/Services/Home/portfolio/the-next-evolution-of-ecommerce.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/portfolio/the-next-evolution-of-ecommerce.yml
@@ -60,3 +60,23 @@ Languages:
       Hint: Client
       Value: |
         <image mediaid="{F7988BDA-29EB-41F1-94FA-F07E35E0B5D5}" />
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "cf7f0018-b2fd-43d0-ac39-f5ff7f6f0714"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "da5308a0-7ff4-4d64-954d-7d96688675b7"
