--- a/src/items/sxa-content/content/Verticals/Services/Settings.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Settings.yml
@@ -70,3 +70,17 @@ Languages:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
       Value: "b3ef7800-1d65-4ecc-b7e4-ddde9e41d75b"
+- Language: "ja-JP"
+  Fields:
+  - ID: "30e85e5d-e00a-4864-b358-7624d511deb4"
+    Hint: __Unversioned revision
+    Value: "b1ea5c5d-8907-4aaa-8c23-220022cea4dc"
+  - ID: "b5e02ad9-d56f-4c41-a065-a133db87bdeb"
+    Hint: __Display name
+    Value: 設定
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "cc0cb74a-c295-439f-917d-d62715b1403b"
