--- a/src/items/sxa-media/Project/Verticals/Services/Mockups/Logos/logoipsum-287.yml
+++ b/src/items/sxa-media/Project/Verticals/Services/Mockups/Logos/logoipsum-287.yml
@@ -7,6 +7,9 @@ SharedFields:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
   Value: "-/media/9D050FDF42DE4290B9CE67C020F31822.ashx?h=16&thn=1&w=16"
+- ID: "22eac599-f13b-4607-a89d-c091763a467d"
+  Hint: Width
+  Value: 100
 - ID: "40e50ed9-ba07-4702-992e-a912738d32dc"
   Hint: Blob
   BlobID: "4fb2a381-34f5-49af-8f5f-483806a4f114"
@@ -20,6 +23,9 @@ SharedFields:
 - ID: "c06867fe-9a43-4c7d-b739-48780492d06f"
   Hint: Extension
   Value: svg
+- ID: "de2ca9e4-c117-4c8a-a139-1ff4b199d15a"
+  Hint: Height
+  Value: 40
 Languages:
 - Language: en
   Versions:
@@ -30,4 +36,4 @@ Languages:
       Value: LogoIpsum2
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "45d1039b-441a-4c93-8bbf-c9c510e82b64"
+      Value: "223e6576-cb87-482f-a8cf-413d7d072063"
