--- a/src/items/sxa-media/Project/Verticals/Services/Mockups/Mask-8.yml
+++ b/src/items/sxa-media/Project/Verticals/Services/Mockups/Mask-8.yml
@@ -40,3 +40,13 @@ Languages:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
       Value: "cc41535b-b310-4ef4-b703-b2ac92c82767"
+- Language: es
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "65885c44-8fcd-4a7f-94f1-ee63703fe193"
+      Hint: Alt
+      Value: hombre hablando por teléfono
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "a0c7954e-2dfc-4243-8660-be6582b78aa5"
