--- a/src/items/sxa-media/Project/Verticals/Services/Mockups/pexels-yankrukov-7793687.yml
+++ b/src/items/sxa-media/Project/Verticals/Services/Mockups/pexels-yankrukov-7793687.yml
@@ -40,3 +40,13 @@ Languages:
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
       Value: "e85d0053-0020-4fd8-a081-1cb89dea7213"
+- Language: es
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "65885c44-8fcd-4a7f-94f1-ee63703fe193"
+      Hint: Alt
+      Value: manos del equipo unidas
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "8fc439d8-00c1-482f-b058-9c9b3019ddf7"
