--- a/src/items/sxa-content/content/Verticals/Services/Home/authors/jack-martinez.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/authors/jack-martinez.yml
@@ -12,9 +12,15 @@ SharedFields:
   Hint: Photo
   Value: |
     <image mediaid="{5DBF2EC2-8350-4239-947F-DDACC6C16E81}" alt="Bio headshot" height="" width="" hspace="" vspace="" />
+- ID: "a4f985d9-98b3-4b52-aaaf-4344f6e747c6"
+  Hint: __Workflow
+  Value: "{E9B6C600-C6E8-4867-BCB7-8B0DC5F19840}"
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: 300
+- ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
+  Hint: __Shared revision
+  Value: "5ed46882-37f6-47ca-a710-e38a365acd8c"
 Languages:
 - Language: en
   Fields:
@@ -65,3 +71,16 @@ Languages:
     - ID: "996749ca-6a47-463d-a759-7db65676f179"
       Hint: Name
       Value: Nick Reddick
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "cb39ea74-ab65-44d9-b31d-1256baeb75d8"
+    - ID: "996749ca-6a47-463d-a759-7db65676f179"
+      Hint: Name
+      Value: "jack-martinez"
