--- a/src/items/sxa-content/content/Verticals/Services/Home/authors/olivia-patel.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/authors/olivia-patel.yml
@@ -72,3 +72,16 @@ Languages:
     - ID: "996749ca-6a47-463d-a759-7db65676f179"
       Hint: Name
       Value: Thomas Kamin
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "9f44999e-3bcd-457e-8c60-26dc2981ed51"
+    - ID: "996749ca-6a47-463d-a759-7db65676f179"
+      Hint: Name
+      Value: "olivia-patel"
