--- a/src/items/sxa-content/content/Verticals/Services/Home/insights/key-industry-trends-shaping-the-digital-landscape.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/insights/key-industry-trends-shaping-the-digital-landscape.yml
@@ -11,6 +11,12 @@ SharedFields:
   Hint: Thumbnail
   Value: |
     <image mediaid="{99A78579-DE59-436E-95C3-CC7921226C5F}" alt="key-industry-trends-shaping-the-digital-landscape" height="" width="" hspace="" vspace="" />
+- ID: "a4f985d9-98b3-4b52-aaaf-4344f6e747c6"
+  Hint: __Workflow
+  Value: "{63CC4D0D-63F1-4BFB-BF63-7EC9D231AFA8}"
+- ID: "dbbbeca1-21c7-4906-9dd2-493c1efa59a2"
+  Hint: __Shared revision
+  Value: "7699b696-aa6b-48a9-8041-c508f633d41e"
 - ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
   Hint: __Renderings
   Value: |
@@ -90,3 +96,29 @@ Languages:
     - ID: "afa77e48-1e92-44b7-ae46-db24b601e6d1"
       Hint: Title
       Value: Key industry trends shaping the digital landscape
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{F0C30D3F-4537-4F66-98A4-213D0FA050FE}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "97125c85-8909-462a-8420-98368fcbd8f5"
+    - ID: "afa77e48-1e92-44b7-ae46-db24b601e6d1"
+      Hint: Title
+      Value: "key-industry-trends-shaping-the-digital-landscape"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{F0C30D3F-4537-4F66-98A4-213D0FA050FE}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "6da9e0bd-0133-486a-9d7b-2829852abed9"
+    - ID: "afa77e48-1e92-44b7-ae46-db24b601e6d1"
+      Hint: Title
+      Value: "key-industry-trends-shaping-the-digital-landscape"
