--- a/src/items/sxa-content/content/Verticals/Services/Home/portfolio/enhancing-retail-experience-with-ar.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/portfolio/enhancing-retail-experience-with-ar.yml
@@ -59,3 +59,23 @@ Languages:
                 <li><strong>Customer Engagement</strong>: In a highly competitive market, capturing and maintaining customer interest is increasingly challenging.</li>
                 <li><strong>Personalization</strong>: Delivering a personalized shopping experience is complex, especially in large-scale retail operations.</li>
             </ul>
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "ed321fe0-b0d8-414c-b449-2e8efbbb9093"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "4398d897-ae70-403a-8733-3a597044bf54"
