--- a/src/items/sxa-content/content/Verticals/Services/Home/portfolio/get-results-with-data-driven-decisions.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/portfolio/get-results-with-data-driven-decisions.yml
@@ -60,3 +60,23 @@ Languages:
       Hint: Client
       Value: |
         <image mediaid="{BE5D7615-900B-467B-AD19-58A3907E43EE}" alt="Sample Logo" height="" width="" hspace="" vspace="" />
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "51fcf221-27f8-4e3b-bc70-5506181333f9"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "f0f37a14-9ca6-451e-925e-12f9fed8ab62"
