--- a/src/items/sxa-content/content/Verticals/Services/Home/portfolio/integrated-social-media-strategies.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/portfolio/integrated-social-media-strategies.yml
@@ -56,3 +56,23 @@ Languages:
                 <li><strong>Limited Reach</strong>: Relying on a single platform can limit brand exposure and restrict access to potential customers.</li>
                 <li><strong>Rapidly Evolving Trends</strong>: Keeping up with changing social media trends and algorithms is challenging for brands seeking to maintain relevance.</li>
             </ul>
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "ca1f9341-89e5-4f69-bbf2-cd357c1e8666"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "f027788a-8e43-4c4c-a1aa-321e90357ca2"
