--- a/src/items/sxa-content/content/Verticals/Services/Home/portfolio/taking-global-logistics-to-the-next-level.yml
+++ b/src/items/sxa-content/content/Verticals/Services/Home/portfolio/taking-global-logistics-to-the-next-level.yml
@@ -66,3 +66,23 @@ Languages:
       Hint: Client
       Value: |
         <image mediaid="{D43716FE-5C3A-422B-A49A-1E0CC584545F}" />
+- Language: "fr-CA"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "c58dcb3f-a41c-4c87-bf34-2331ee35e366"
+- Language: "ja-JP"
+  Versions:
+  - Version: 1
+    Fields:
+    - ID: "3e431de1-525e-47a3-b6b0-1ccbec3a8c98"
+      Hint: __Workflow state
+      Value: "{C8FF2A20-ABA6-409B-AD69-955CD5219D07}"
+    - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
+      Hint: __Revision
+      Value: "f34db0d9-29c5-4bca-a101-72e71e7d7330"
