--- a/src/items/sxa-media/Project/Verticals/Services/Mockups/Logos/logoipsum-317.yml
+++ b/src/items/sxa-media/Project/Verticals/Services/Mockups/Logos/logoipsum-317.yml
@@ -7,6 +7,9 @@ SharedFields:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
   Value: "-/media/F7988BDA29EB41F194FAF07E35E0B5D5.ashx?h=16&thn=1&w=16"
+- ID: "22eac599-f13b-4607-a89d-c091763a467d"
+  Hint: Width
+  Value: 100
 - ID: "40e50ed9-ba07-4702-992e-a912738d32dc"
   Hint: Blob
   BlobID: "d3e71caf-19fe-4dd4-9ac5-6e0171062284"
@@ -20,6 +23,9 @@ SharedFields:
 - ID: "c06867fe-9a43-4c7d-b739-48780492d06f"
   Hint: Extension
   Value: svg
+- ID: "de2ca9e4-c117-4c8a-a139-1ff4b199d15a"
+  Hint: Height
+  Value: 40
 Languages:
 - Language: en
   Versions:
@@ -30,4 +36,4 @@ Languages:
       Value: LogoIpsum3
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "ac5628a5-d2b4-46ea-8dc9-48057a80c16e"
+      Value: "a0bcf1cc-be57-4c39-afdc-03dfc2baaadb"
